--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 buildscript {
+    ext.springVersion = "1.5.8.RELEASE"
     repositories {
         mavenCentral()
         maven {
@@ -6,19 +7,13 @@ buildscript {
         }
     }
     dependencies {
-        classpath "org.springframework.boot:spring-boot-gradle-plugin:1.5.8.RELEASE"
-        classpath 'org.springframework:springloaded:1.2.6.RELEASE'
+        classpath "org.springframework.boot:spring-boot-gradle-plugin:$springVersion"
     }
 }
 
 apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
-
-jar {
-    baseName = 'graphql-spring-api'
-    version = '1.0'
-}
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -28,8 +23,7 @@ repositories {
 }
 
 dependencies {
-    compile "org.springframework.boot:spring-boot-starter-web:1.5.8.RELEASE"
-    compile "org.springframework.boot:spring-boot-starter-actuator"
+    compile "org.springframework.boot:spring-boot-starter-web:$springVersion"
     compile "com.graphql-java:graphql-spring-boot-starter:3.10.0"
     compile "com.graphql-java:graphql-java-tools:4.3.0"
 
